--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -3,7 +3,7 @@ http {
  include       /etc/nginx/mime.types;
     server {
         listen 80;
-#         server_name localhost;
+        server_name code.pomkalk.ru;
 
         location /api/ {
             proxy_pass http://goback:4000;
@@ -15,5 +15,4 @@ http {
             index index.html;
         }
     }
-
 }
