--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -10,6 +10,11 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+        location /api2/ {
+            proxy_pass http://rustback:4001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
         location / {
             root /usr/share/nginx/html;
             index index.html;
