--- a/rust-srv/Dockerfile
+++ b/rust-srv/Dockerfile
@@ -1,6 +1,19 @@
+FROM rust:1.71 as plan
+WORKDIR /app
+RUN cargo install cargo-chef
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM rust:1.71 as cache
+WORKDIR /app
+RUN cargo install cargo-chef
+COPY --from=plan /app/recipe.json recipe.json
+RUN cargo chef cook --release --recipe-path=recipe.json
+
 FROM rust:1.71 as build
-COPY . /src
 WORKDIR /src
+COPY . /src
+COPY --from=cache /app/target target
 RUN cargo build --release
 
 
